--- a/index.html
+++ b/index.html
@@ -3,13 +3,30 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To do List</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer">
+    <title>Todo List</title>
 </head>
 
 <body>
+    <header>
+        Lista de Tarefas
+    </header>
+    <form action="">
+        <input type="text" class="todo-input">
+        <button class="todo-button">
+            <i class="fas fa-plus-square"></i>
+        </button>
+    </form>
+    <div class="todo-container">
+        <ul class="todo-list">
+            <li>Tarefas</li>
+            <li></li>
+            <li></li>
+        </ul>
+    </div>
 
+    <script src="app.js"></script>
 </body>
 
 </html>
