add-delete-e-alteracoes-no-html

--- a/index.html
+++ b/index.html
@@ -12,29 +12,27 @@
     <header>
         Lista de Tarefas
     </header>
+
     <form>
         <input type="text" class="todo-input">
         <button type="submit" class="todo-button">
             <i class="fas fa-plus-square"></i>
         </button>
+
         <div class="select">
-            <select name="todos" class="filter-todos">
+            <select name="todos" class="filter-todo">
                 <option value="all">Todas</option>
                 <option value="completed">Completa</option>
                 <option value="uncompleted">Incompleta</option>
             </select>
         </div>
     </form>
-    <form action="">
-        <input type="text" class="todo-input">
-        <button class="todo-button">
-            <i class="fas fa-plus-square"></i>
-        </button>
-    </form>
+
     <div class="todo-container">
         <ul class="todo-list">
         </ul>
     </div>
+
     <script src="app.js"></script>
 </body>
 
