--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,400;0,700;1,200;1,800&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,400;0,700;1,200;1,800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/button.css">
     <link rel="stylesheet" href="css/records.css">
@@ -43,8 +42,7 @@
                     <span class="modal-close" id="modalClose">&#10006;</span>
                 </header>
                 <form id="form" class="modal-form">
-                    <input type="text" id="nome" data-index="new" class="modal-field" placeholder="Nome do Cliente"
-                        required>
+                    <input type="text" id="nome" data-index="new" class="modal-field" placeholder="Nome do Cliente" required>
                     <input type="email" id="email" class="modal-field" placeholder="e-mail do Cliente" required>
                     <input type="text" id="celular" class="modal-field" placeholder="Celular do Cliente" required>
                     <input type="text" id="cidade" class="modal-field" placeholder="Cidade do Cliente" required>
@@ -57,7 +55,7 @@
         </div>
     </main>
     <footer>
-        Copyright &copy; Prof. Fernando Leonid
+        Copyright &copy; Rafael Mavili
     </footer>
 </body>
 
